Add security manager property Java 18